@@ -9,8 +9,9 @@ Notes: https://@plataformatec/devise/wiki/How-To:-Upgrade-to-Devise-2.0
   * Do not run validations unless on reconfirmable branch
 
 * enhancements
-  * Allow parent controller to be customizable
   * Inherit from the same Devise parent controller (by @sj26)
+  * Allow parent_controller to be customizable via Devise.parent_controller, useful for engines
+  * Allow router_name to be customizable via Devise.router_name, useful for engines
 
 * deprecation
   * Move devise/shared/_links.erb to devise/_links.erb
